@@ -1,5 +1,8 @@
 /*
  * $Log: open.h,v $
+ * Revision 1.9  2021-06-15 21:21:29+05:30  Cprogrammer
+ * added open_exclr() function
+ *
  * Revision 1.8  2020-11-22 23:51:45+05:30  Cprogrammer
  * use const keyword
  *
@@ -18,6 +21,7 @@
 
 int             open_read(const char *);
 int             open_excl(const char *);
+int             open_exclr(const char *);
 int             open_append(const char *);
 int             open_trunc(const char *);
 int             open_write(const char *);
