@@ -29,6 +29,8 @@ Release 1.1 Start 14/02/2021
 - 10/06/2021
 15. fixed compiler warnings
 16. added makeargs.c, mktempfile.c
+- 15/06/2021
+17. added token822.c, cdbmss.c, open_exclr.c
 
 * Sunday 14 February 2021 11:27:21 PM IST
 Release 1.0 Start 21/05/2020
